--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!----------------HEADER PART--------------------->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__wrap">
         <a class="logo logo--position link" href="./index.html"
           ><span class="logo__web-element">Web</span
@@ -72,21 +72,21 @@
           </ul>
         </div>
       </div>
-    </header>
+    </header> -->
 
     <!----------------MAIN CONTENT---------------------->
     <main>
       <!--------------HERO PART------------------------->
-      <section class="hero hero--position">
+      <!-- <section class="hero hero--position">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button class="btn hero__btn--position" type="button" data-modal-open>
             Замовити послугу
           </button>
         </div>
-      </section>
+      </section> -->
       <!--------------WORKING PRINCIPLES---------------->
-      <section class="principles">
+      <!-- <section class="principles">
         <div class="container">
           <h2 class="visually-hidden">Принципи роботи</h2>
           <ul class="principles__list">
@@ -139,9 +139,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--------------TASKS----------------------------->
-      <section class="tasks">
+      <!-- <section class="tasks">
         <div class="container">
           <h2 class="tasks__title tasks__title--position">Чим ми займаємося</h2>
           <ul class="tasks__list">
@@ -173,7 +173,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--------------TEAM------------------------------>
       <section class="team">
         <div class="container">
@@ -363,7 +363,7 @@
         </div>
       </section>
       <!--------------PERMANENT CLIENTS----------------->
-      <section class="permanent-clients">
+      <!-- <section class="permanent-clients">
         <div class="container">
           <h2 class="permanent-clients__title">Постійні клієнти</h2>
           <ul class="permanent-clients__list">
@@ -411,10 +411,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!----------------FOOTER---------------------------->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer--flex">
         <div class="footer__contact-box">
           <a class="logo link" href="./index.html"
@@ -518,7 +518,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!----------------BACKDROP-------------------------->
     <div class="backdrop is-hidden" data-modal>
       <!--------------MODAL----------------------------->
