--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Студія</title>
+    <title>Портфоліо</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!--header-->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__wrap">
         <a class="logo logo--position link" href="./index.html"
           ><span class="logo__web-element">Web</span
@@ -70,7 +70,7 @@
           </ul>
         </div>
       </div>
-    </header>
+    </header> -->
     <!--main content-->
     <main>
       <!--fiter buttons-->
@@ -97,11 +97,34 @@
           <ul class="projects-list">
             <li class="projects-list-item">
               <div class="project-info-wrap">
-                <img
-                  src="./img/tecnokryak-website.jpg"
-                  alt="Веб сайт Технокряк"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/tecnokryak-website.jpg        1x,
+                      ./img/tecnokryak-website-dsc-2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/tecnokryak-website-tab-1x.jpg 1x,
+                      ./img/tecnokryak-website-tab-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/tecnokryak-website-mob-1x.jpg 1x,
+                      ./img/tecnokryak-website-mob-2x.jpg 2x
+                    "
+                    media="(max-width:767px)"
+                  />
+                  <img
+                    src="./img/tecnokryak-website.jpg"
+                    alt="Веб сайт Технокряк"
+                    width="450"
+                  />
+                </picture>
                 <p class="project-text-info">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -115,11 +138,34 @@
             </li>
             <li class="projects-list-item">
               <div class="project-info-wrap">
-                <img
-                  src="./img/poster-basketball-design.jpg"
-                  alt="Постер баскетбольного матчу"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/poster-basketball-design.jpg        1x,
+                      ./img/poster-basketball-design-dsc-2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/poster-basketball-design-tab-1x.jpg 1x,
+                      ./img/poster-basketball-design-tab-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/poster-basketball-design-mob-1x.jpg 1x,
+                      ./img/poster-basketball-design-mob-2x.jpg 2x
+                    "
+                    media="(max-width:767px)"
+                  />
+                  <img
+                    src="./img/poster-basketball-design.jpg"
+                    alt="Постер баскетбольного матчу"
+                    width="450px"
+                  />
+                </picture>
                 <p class="project-text-info">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -133,11 +179,34 @@
             </li>
             <li class="projects-list-item">
               <div class="project-info-wrap">
-                <img
-                  src="./img/restaurant-app.jpg"
-                  alt="Додаток ресторана Seafood"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/restaurant-app.jpg        1x,
+                      ./img/restaurant-app-dsc-2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/restaurant-app-tab-1x.jpg 1x,
+                      ./img/restaurant-app-tab-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/restaurant-app-mob-1x.jpg 1x,
+                      ./img/restaurant-app-mob-2x.jpg 2x
+                    "
+                    media="(max-width:767px)"
+                  />
+                  <img
+                    src="./img/restaurant-app.jpg"
+                    alt="Додаток ресторана Seafood"
+                    width="450px"
+                  />
+                </picture>
                 <p class="project-text-info">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -151,11 +220,34 @@
             </li>
             <li class="projects-list-item">
               <div class="project-info-wrap">
-                <img
-                  src="./img/project-prime-marketing.jpg"
-                  alt="Маркетинговий проєкт Prime"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/project-prime-marketing.jpg        1x,
+                      ./img/project-prime-marketing-dsc-2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/project-prime-marketing-tab-1x.jpg 1x,
+                      ./img/project-prime-marketing-tab-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/project-prime-marketing-mob-1x.jpg 1x,
+                      ./img/project-prime-marketing-mob-2x.jpg 2x
+                    "
+                    media="(max-width:767px)"
+                  />
+                  <img
+                    src="./img/project-prime-marketing.jpg"
+                    alt="Маркетинговий проєкт Prime"
+                    width="450"
+                  />
+                </picture>
                 <p class="project-text-info">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -169,11 +261,34 @@
             </li>
             <li class="projects-list-item">
               <div class="project-info-wrap">
-                <img
-                  src="./img/project-boxes-app.jpg"
-                  alt="Додаток Boxes"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/project-boxes-app.jpg        1x,
+                      ./img/project-boxes-app-dsc-2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/project-boxes-app-tab-1x.jpg 1x,
+                      ./img/project-boxes-app-tab-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/project-boxes-app-mob-1x.jpg 1x,
+                      ./img/project-boxes-app-mob-2x.jpg 2x
+                    "
+                    media="(max-width:767px)"
+                  />
+                  <img
+                    src="./img/project-boxes-app.jpg"
+                    alt="Додаток Boxes"
+                    width="450"
+                  />
+                </picture>
                 <p class="project-text-info">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -187,11 +302,34 @@
             </li>
             <li class="projects-list-item">
               <div class="project-info-wrap">
-                <img
-                  src="./img/inspiration-website.jpg"
-                  alt="Вебсайт Inspiration has no Borders"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/inspiration-website.jpg        1x,
+                      ./img/inspiration-website-dsc-2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/inspiration-website-tab-1x.jpg 1x,
+                      ./img/inspiration-website-tab-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/inspiration-website-mob-1x.jpg 1x,
+                      ./img/inspiration-website-mob-2x.jpg 2x
+                    "
+                    media="(max-width:767px)"
+                  />
+                  <img
+                    src="./img/inspiration-website.jpg"
+                    alt="Вебсайт Inspiration has no Borders"
+                    width="450"
+                  />
+                </picture>
                 <p class="project-text-info">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -205,11 +343,34 @@
             </li>
             <li class="projects-list-item">
               <div class="project-info-wrap">
-                <img
-                  src="./img/journal-design.jpg"
-                  alt="Дизайн видання"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/journal-design.jpg        1x,
+                      ./img/journal-design-dsc-2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/journal-design-tab-1x.jpg 1x,
+                      ./img/journal-design-tab-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/journal-design-mob-1x.jpg 1x,
+                      ./img/journal-design-mob-2x.jpg 2x
+                    "
+                    media="(max-width:767px)"
+                  />
+                  <img
+                    src="./img/journal-design.jpg"
+                    alt="Дизайн видання"
+                    width="370"
+                  />
+                </picture>
                 <p class="project-text-info">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -223,11 +384,34 @@
             </li>
             <li class="projects-list-item">
               <div class="project-info-wrap">
-                <img
-                  src="./img/project-lab-marketing.jpg"
-                  alt="Маркетинговий проєкт LAB"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/project-lab-marketing.jpg        1x,
+                      ./img/project-lab-marketing-dsc-2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/project-lab-marketing-tab-1x.jpg 1x,
+                      ./img/project-lab-marketing-tab-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/project-lab-marketing-mob-1x.jpg 1x,
+                      ./img/project-lab-marketing-mob-2x.jpg 2x
+                    "
+                    media="(max-width:767px)"
+                  />
+                  <img
+                    src="./img/project-lab-marketing.jpg"
+                    alt="Маркетинговий проєкт LAB"
+                    width="450"
+                  />
+                </picture>
                 <p class="project-text-info">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -241,11 +425,34 @@
             </li>
             <li class="projects-list-item">
               <div class="project-info-wrap">
-                <img
-                  src="./img/busines-app.jpg"
-                  alt="Додаток для бізнесу"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./img/busines-app.jpg        1x,
+                      ./img/busines-app-dsc-2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/busines-app-tab-1x.jpg 1x,
+                      ./img/busines-app-tab-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./img/busines-app-mob-1x.jpg 1x,
+                      ./img/busines-app-mob-2x.jpg 2x
+                    "
+                    media="(max-width:767px)"
+                  />
+                  <img
+                    src="./img/busines-app.jpg"
+                    alt="Додаток для бізнесу"
+                    width="450"
+                  />
+                </picture>
                 <p class="project-text-info">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та сервісів. Все це дозволить відвідувачу отримати
@@ -262,7 +469,7 @@
       </section>
     </main>
     <!--footer-->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer--flex">
         <div class="footer__contact-box">
           <a class="logo link" href="./index.html"
@@ -366,6 +573,6 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
