--- a/index.html
+++ b/index.html
@@ -24,53 +24,140 @@
   <body>
     <!----------------HEADER PART--------------------->
     <header class="header">
-      <div class="container header__wrap">
-        <a class="logo logo--position link" href="./index.html"
-          ><span class="logo__web-element">Web</span
-          ><span class="logo__studio-element">Studio</span></a
-        >
-        <nav class="navigation">
-          <ul class="navigation__list">
+      <div class="container">
+        <nav class="header__nav">
+          <a class="logo header__logo link" href="index.html"
+            ><span class="logo__span logo__span--color-blue">Web</span>Studio</a
+          >
+          <ul class="navigation header__navigation navigation__list">
             <li class="navigation__item">
-              <a class="navigation__link current link" href="./index.html"
-                >Студія</a
+              <a class="navigation__link link" href="index.html">
+                <span class="accent underline">Студія</span></a
               >
             </li>
             <li class="navigation__item">
-              <a class="navigation__link link" href="./portfolio.html"
+              <a class="navigation__link link" href="portfolio.html"
                 >Портфоліо</a
               >
             </li>
             <li class="navigation__item">
-              <a class="navigation__link link" href="#">Контакти</a>
+              <a class="navigation__link link" href="">Контакти</a>
             </li>
           </ul>
-        </nav>
-        <div class="connection connection--position">
-          <ul class="connection__list">
-            <li class="connection__item">
-              <a class="connection__link link" href="mailto:info@devstudio.com"
-                ><svg class="connection__mail-icon" width="16" height="12">
+          <ul class="communication list connection__list">
+            <li class="communication__item">
+              <a class="communication__link link" href="">
+                <svg
+                  class="communication__icon communication__icon-mail"
+                  width="16"
+                  height="12"
+                >
                   <use
-                    class="connection__icon"
+                    class="header-icon"
                     href="./img/icons.svg#icon-envelope"
-                  ></use>
-                </svg>
-                info@devstudio.com</a
+                  ></use></svg
+                >info@devstudio.com</a
               >
             </li>
-            <li class="connection__item">
-              <a class="connection__link link" href="tel:+380961111111"
-                ><svg class="connection__tel-icon" width="10" height="16">
+            <li class="communication__item">
+              <a class="communication__link link" href="tel:">
+                <svg
+                  class="communication__icon communication__icon-tel"
+                  width="10"
+                  height="16"
+                >
                   <use
-                    class="connection__icon"
+                    class="header-icon"
                     href="./img/icons.svg#icon-smartphone"
                   ></use></svg
                 >+38 096 111 11 11</a
               >
             </li>
           </ul>
-        </div>
+          <!-- Mob Menu -->
+          <button type="button" class="menu-btn" data-menu-open>
+            <svg class="menu-btn__icon" width="40" height="40">
+              <use href="./img/icons.svg#icon-menu_icon"></use>
+            </svg>
+          </button>
+          <div class="mob-menu is-hidden" data-menu>
+            <div class="mob-container">
+              <div class="mob-menu__top">
+                <button
+                  class="menu-btn menu-close-btn"
+                  data-menu-close
+                  type="button"
+                >
+                  <svg class="menu-btn__icon" width="40" height="40">
+                    <use href="./img/icons.svg#icon-close"></use>
+                  </svg>
+                </button>
+                <ul class="mob-menu-nav mob-menu__list">
+                  <li class="mob-menu-nav__item">
+                    <a class="mob-menu-nav__link link" href="index.html"
+                      ><span class="mob-menu-nav__span mob-menu-nav__span--blue"
+                        >Студія</span
+                      >
+                    </a>
+                  </li>
+                  <li class="mob-menu-nav__item">
+                    <a class="mob-menu-nav__link link" href="portfolio.html"
+                      >Портфоліо</a
+                    >
+                  </li>
+                  <li class="mob-menu-nav__item">
+                    <a class="mob-menu-nav__link link" href="">Контакти</a>
+                  </li>
+                </ul>
+              </div>
+              <ul class="mob-menu-com mob-menu__list">
+                <li class="mob-menu-com__item">
+                  <a
+                    class="mob-menu-com__link mob-menu-com__link--tel link"
+                    href="tel:"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+                <li class="mob-menu-com__item">
+                  <a
+                    class="mob-menu-com__link mob-menu-com__link--mail link"
+                    href=""
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+              <ul class="mob-menu-soc mob-menu__list">
+                <li class="mob-menu-soc__item">
+                  <a class="mob-menu-soc__link link" href=""
+                    >Instagram
+                    <span
+                      class="mob-menu-soc__span mob-menu-soc__span--line"
+                    ></span>
+                  </a>
+                </li>
+                <li class="mob-menu-soc__item">
+                  <a class="mob-menu-soc__link link" href=""
+                    >Twitter
+                    <span
+                      class="mob-menu-soc__span mob-menu-soc__span--line"
+                    ></span
+                  ></a>
+                </li>
+                <li class="mob-menu-soc__item">
+                  <a class="mob-menu-soc__link link" href=""
+                    >Facebook
+                    <span
+                      class="mob-menu-soc__span mob-menu-soc__span--line"
+                    ></span>
+                  </a>
+                </li>
+                <li class="mob-menu-soc__item">
+                  <a class="mob-menu-soc__link link" href="">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
       </div>
     </header>
 
@@ -506,111 +593,168 @@
       </section>
     </main>
     <!----------------FOOTER---------------------------->
-    <!-- <footer class="footer">
-      <div class="container footer--flex">
-        <div class="footer__contact-box">
-          <a class="logo link" href="./index.html"
-            ><span class="logo__web-element">Web</span
-            ><span
-              class="logo__studio-element logo__studio-element--footer-color"
-              >Studio</span
-            ></a
+    <footer class="footer section">
+      <div class="container footer__flex">
+        <div class="footer__address">
+          <a class="logo link" href="index.html"
+            ><span class="logo__span logo__span--color-blue">Web</span
+            ><span class="logo__text logo__text--color-white">Studio</span></a
           >
-          <address class="address address--position">
-            <ul class="address__list">
-              <li class="address__item address__item--position">
-                <a
-                  class="map__link link"
-                  href="https://goo.gl/maps/FsZgaGo8YKT9qEPr9"
-                  target="_blank"
-                  rel="noreferrer noopener nofollow"
-                  >м. Київ, пр-т Лесі Українки, 26</a
-                >
+          <address class="address">
+            <p class="address__text">м. Київ, пр-т Лесі Українки, 26</p>
+            <ul class="footer-comm list">
+              <li class="footer-comm__item">
+                <a class="footer-comm__link link" href="">info@example.com</a>
               </li>
-              <li class="address__item address__item--position">
-                <a class="mail__link link" href="mailto:info@example.com"
-                  >info@example.com</a
-                >
-              </li>
-              <li class="address__item address__item--position">
-                <a class="tel__link link" href="tel:+380991111111"
+              <li class="footer-comm__item">
+                <a class="footer-comm__link link" href="tel:"
                   >+38 099 111 11 11</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="join-us join-us--position">
-          <h3 class="join-us__title">Приєднуйтесь</h3>
-          <ul class="soc soc__list">
-            <li class="soc__item">
-              <a href="" class="soc__link soc__link--footer-color link"
-                ><svg
-                  class="soc__icon soc__icon--footer-color"
-                  width="20"
-                  height="20"
-                >
-                  <use href="./img/icons.svg#icon-instagram-icon"></use></svg
-              ></a>
+        <div class="join footer__join">
+          <h2 class="footer-title title">Приєднуйтесь</h2>
+          <ul class="join__list list">
+            <li class="join__item">
+              <a class="soc soc--color-white soc--border" href="">
+                <svg width="20" height="20">
+                  <use href="./images/icons-sprite.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="soc__item">
-              <a href="" class="soc__link soc__link--footer-color link"
-                ><svg
-                  class="soc__icon soc__icon--footer-color"
-                  width="20"
-                  height="20"
-                >
-                  <use href="./img/icons.svg#icon-twitter-icon"></use></svg
-              ></a>
+            <li class="join__item">
+              <a class="soc soc--color-white soc--border" href="">
+                <svg width="20" height="20">
+                  <use href="./images/icons-sprite.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="soc__item">
-              <a href="" class="soc__link soc__link--footer-color link"
-                ><svg
-                  class="soc__icon soc__icon--footer-color"
-                  width="20"
-                  height="20"
-                >
-                  <use href="./img/icons.svg#icon-facebook-icon"></use></svg
-              ></a>
+            <li class="join__item">
+              <a class="soc soc--color-white soc--border" href="">
+                <svg width="20" height="20">
+                  <use href="./images/icons-sprite.svg#facebook"></use>
+                </svg>
+              </a>
             </li>
-            <li class="soc__item">
-              <a href="" class="soc__link soc__link--footer-color link"
-                ><svg
-                  class="soc__icon soc__icon--footer-color"
-                  width="20"
-                  height="20"
-                >
-                  <use href="./img/icons.svg#icon-linkedin-icon"></use></svg
-              ></a>
+            <li class="join__item">
+              <a class="soc soc--color-white soc--border" href="">
+                <svg width="20" height="20">
+                  <use href="./images/icons-sprite.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
-        <div class="footer-subscribing footer-subscribing--position">
-          <form>
-            <p class="footer-subscribing__title">Підпишіться на розсилку</p>
-            <div class="footer-subscribing__wrap">
+        <form class="sub footer__sub">
+          <h2 class="footer-title title">Підпишіться на розсилку</h2>
+          <div class="sub__flex">
+            <input
+              type="text"
+              class="sub__input"
+              name="footer-sub"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="btn sub__btn">
+              Підписатися
+              <svg class="sub__icon" width="24" height="24">
+                <use href="./images/icons-sprite.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
+      </div>
+    </footer>
+    <!-- Modal -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <p class="modal__title">Залиште свої дані, ми вам передзвонимо</p>
+        <form class="registration">
+          <div class="registration__box">
+            <label for="user-name" class="registration__label">Ім'я</label>
+            <div class="registration__wrap">
+              <input
+                type="text"
+                id="user-name"
+                class="registration__input"
+                name="user-name"
+                required
+              />
+              <svg class="registration__icon" width="18" height="18">
+                <use href="./images/icons-sprite.svg#modal-name"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="registration__box">
+            <label for="user-tel" class="registration__label">Телефон</label>
+            <div class="registration__wrap">
+              <input
+                type="tel"
+                id="user-tel"
+                class="registration__input"
+                name="user-tel"
+                required
+              />
+              <svg class="registration__icon" width="18" height="18">
+                <use href="./images/icons-sprite.svg#modal-tel"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="registration__box">
+            <label for="user-mail" class="registration__label">Пошта</label>
+            <div class="registration__wrap">
               <input
                 type="email"
-                class="footer-subscribing__input"
-                name="user-email"
-                id="user-email"
-                placeholder="E-mail"
+                id="user-mail"
+                class="registration__input"
+                name="user-mail"
+                required
               />
-              <button type="submit" class="footer-subscribing__submit-btn">
-                Підписатися
-                <svg
-                  class="footer-subscribing__icon-send"
-                  width="24"
-                  height="24"
-                >
-                  <use href="./img/icons.svg#icon-send"></use>
-                </svg>
-              </button>
+              <svg class="registration__icon" width="18" height="18">
+                <use href="./images/icons-sprite.svg#modal-mail"></use>
+              </svg>
             </div>
-          </form>
-        </div>
+          </div>
+          <label for="user-comment" class="registration__label">Коментар</label>
+          <textarea
+            name="user-comment"
+            id="user-comment"
+            cols="30"
+            rows="10"
+            class="registration__comment"
+            placeholder="Введіть текст"
+          ></textarea>
+          <div class="user-policy">
+            <input
+              type="checkbox"
+              class="user-policy__input visually-hidden"
+              id="user-policy"
+              name="user-policy"
+              value="true"
+            />
+            <label for="user-policy" class="user-policy__text"
+              ><span class="user-policy__check">
+                <svg width="14" height="13">
+                  <use href="./images/icons-sprite.svg#modal-check"></use>
+                </svg>
+              </span>
+              Погоджуюся з розсилкою та приймаю
+              <a class="user-policy__link" href="">
+                <span class="user-policy__underline">Умови договору</span></a
+              >
+            </label>
+          </div>
+          <button type="submit" class="btn user-policy__btn">Відправити</button>
+        </form>
+        <button type="button" class="modal__close-btn" data-modal-close>
+          <svg class="modal__close-icon" width="18" height="18">
+            <use href="./images/icons-sprite.svg#close"></use>
+          </svg>
+        </button>
       </div>
-    </footer> -->
+    </div>
+
     <!----------------BACKDROP-------------------------->
     <div class="backdrop is-hidden" data-modal>
       <!--------------MODAL----------------------------->
