--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!--header-->
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header__wrap">
         <a class="logo logo--position link" href="./index.html"
           ><span class="logo__web-element">Web</span
@@ -69,8 +69,13 @@
             </li>
           </ul>
         </div>
+        <button type="button" class="btn__menu">
+          <svg class="" width="40" height="40">
+            <use href="./img/icons.svg#icon-menu_icon"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+    </header>
     <!--main content-->
     <main>
       <!--fiter buttons-->
@@ -469,84 +474,86 @@
       </section>
     </main>
     <!--footer-->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer--flex">
-        <div class="footer__contact-box">
-          <a class="logo link" href="./index.html"
-            ><span class="logo__web-element">Web</span
-            ><span
-              class="logo__studio-element logo__studio-element--footer-color"
-              >Studio</span
-            ></a
-          >
-          <address class="address address--position">
-            <ul class="address__list">
-              <li class="address__item address__item--position">
-                <a
-                  class="map__link link"
-                  href="https://goo.gl/maps/FsZgaGo8YKT9qEPr9"
-                  target="_blank"
-                  rel="noreferrer noopener nofollow"
-                  >м. Київ, пр-т Лесі Українки, 26</a
-                >
+        <div class="footer--tab">
+          <div class="footer__contact-box">
+            <a class="logo" href="./index.html"
+              ><span class="logo__web-element">Web</span
+              ><span
+                class="logo__studio-element logo__studio-element--footer-color"
+                >Studio</span
+              ></a
+            >
+            <address class="address address--position">
+              <ul class="address__list">
+                <li class="address__item address__item--position">
+                  <a
+                    class="map__link link"
+                    href="https://goo.gl/maps/FsZgaGo8YKT9qEPr9"
+                    target="_blank"
+                    rel="noreferrer noopener nofollow"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="address__item address__item--position">
+                  <a class="mail__link link" href="mailto:info@example.com"
+                    >info@example.com</a
+                  >
+                </li>
+                <li class="address__item address__item--position">
+                  <a class="tel__link link" href="tel:+380991111111"
+                    >+38 099 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="join-us join-us--position">
+            <h3 class="join-us__title">Приєднуйтесь</h3>
+            <ul class="soc soc__list">
+              <li class="soc__item">
+                <a href="" class="soc__link soc__link--footer-color link"
+                  ><svg
+                    class="soc__icon soc__icon--footer-color"
+                    width="20"
+                    height="20"
+                  >
+                    <use href="./img/icons.svg#icon-instagram-icon"></use></svg
+                ></a>
               </li>
-              <li class="address__item address__item--position">
-                <a class="mail__link link" href="mailto:info@example.com"
-                  >info@example.com</a
-                >
+              <li class="soc__item">
+                <a href="" class="soc__link soc__link--footer-color link"
+                  ><svg
+                    class="soc__icon soc__icon--footer-color"
+                    width="20"
+                    height="20"
+                  >
+                    <use href="./img/icons.svg#icon-twitter-icon"></use></svg
+                ></a>
               </li>
-              <li class="address__item address__item--position">
-                <a class="tel__link link" href="tel:+380991111111"
-                  >+38 099 111 11 11</a
-                >
+              <li class="soc__item">
+                <a href="" class="soc__link soc__link--footer-color link"
+                  ><svg
+                    class="soc__icon soc__icon--footer-color"
+                    width="20"
+                    height="20"
+                  >
+                    <use href="./img/icons.svg#icon-facebook-icon"></use></svg
+                ></a>
+              </li>
+              <li class="soc__item">
+                <a href="" class="soc__link soc__link--footer-color link"
+                  ><svg
+                    class="soc__icon soc__icon--footer-color"
+                    width="20"
+                    height="20"
+                  >
+                    <use href="./img/icons.svg#icon-linkedin-icon"></use></svg
+                ></a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="join-us join-us--position">
-          <h3 class="join-us__title">Приєднуйтесь</h3>
-          <ul class="soc soc__list">
-            <li class="soc__item">
-              <a href="" class="soc__link soc__link--footer-color link"
-                ><svg
-                  class="soc__icon soc__icon--footer-color"
-                  width="20"
-                  height="20"
-                >
-                  <use href="./img/icons.svg#icon-instagram-icon"></use></svg
-              ></a>
-            </li>
-            <li class="soc__item">
-              <a href="" class="soc__link soc__link--footer-color link"
-                ><svg
-                  class="soc__icon soc__icon--footer-color"
-                  width="20"
-                  height="20"
-                >
-                  <use href="./img/icons.svg#icon-twitter-icon"></use></svg
-              ></a>
-            </li>
-            <li class="soc__item">
-              <a href="" class="soc__link soc__link--footer-color link"
-                ><svg
-                  class="soc__icon soc__icon--footer-color"
-                  width="20"
-                  height="20"
-                >
-                  <use href="./img/icons.svg#icon-facebook-icon"></use></svg
-              ></a>
-            </li>
-            <li class="soc__item">
-              <a href="" class="soc__link soc__link--footer-color link"
-                ><svg
-                  class="soc__icon soc__icon--footer-color"
-                  width="20"
-                  height="20"
-                >
-                  <use href="./img/icons.svg#icon-linkedin-icon"></use></svg
-              ></a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="footer-subscribing footer-subscribing--position">
           <form>
@@ -573,6 +580,6 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
