--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       referrerpolicy="no-referrer"
     />
     <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+    <link rel="stylesheet" href="./js/mob-menu.js" />
+    <link rel="stylesheet" href="./js/modal.js" />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
@@ -78,6 +80,7 @@
         </button>
       </div>
       <!-----------------------MOB MENU-------------------------------->
+      <div><p class="is-hidden">lklkl,l</p></div>
       <div
         class="mobile-menu js-menu-container is-hidden"
         data-menu
@@ -764,7 +767,10 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
     <script src="./js/mob-menu.js"></script>
+    <script src="./js/modal.js"></script>
+
   </body>
 </html>
