--- a/index.html
+++ b/index.html
@@ -73,25 +73,21 @@
             </li>
           </ul>
         </div>
-        <button type="button" class="menu-button js-open-menu" data-menu-open">
+        <button type="button" class="menu-button js-open-menu" data-menu-open>
           <svg class="" width="40" height="40">
             <use href="./img/icons.svg#icon-menu_icon"></use>
           </svg>
         </button>
       </div>
       <!-----------------------MOB MENU-------------------------------->
-      <div><p class="is-hidden">lklkl,l</p></div>
-      <div
-        class="mobile-menu js-menu-container is-hidden"
-        data-menu
-      >
+      <div class="mobile-menu js-menu-container is-hidden" data-menu>
         <button
           type="button"
           class="menu-button-close js-close-menu"
           data-menu-close
         >
-          <svg class="icon-menu-close" width="40" height="40">
-            <use href="./images/icons.svg#icon-menu-close"></use>
+          <svg class="" width="40" height="40">
+            <use href="./img/icons.svg#icon-close_40px"></use>
           </svg>
         </button>
         <nav class="menu-nav">
@@ -768,9 +764,10 @@
       </div>
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>AOS.init();</script>
+    <script>
+      AOS.init();
+    </script>
     <script src="./js/mob-menu.js"></script>
     <script src="./js/modal.js"></script>
-
   </body>
 </html>
